--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.564.0",
     "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -21,18 +25,21 @@
     "react-router-dom": "^7.8.0",
     "recharts": "^3.1.2",
     "socket.io-client": "^4.8.3",
-    "tailwindcss": "^4.1.11"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.24",
     "baseline-browser-mapping": "^2.9.7",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "vite": "^7.1.0"
   }
 }
